--- a/Bulk_API_Pull_DP.ipynb
+++ b/Bulk_API_Pull_DP.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "api_key = '26b4bc4c-c0b3-4827-9d27-e04b3c032d4b'"
+    "api_key = '26b4bc4c-c0b3-4827-9d27-XXXXXXXXXXXXX'"
    ]
   },
   {
